--- a/CRAN_Mac.Rmd
+++ b/CRAN_Mac.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Download Instructions for Mac OS"
+title: "R Download Instructions for Mac OS X"
 author: "Curry W. Hilton"
 date: "July 5, 2016"
 output: html_document
